texlive-bin (2020.20200327.54578-3) UNRELEASED; urgency=medium

  * Add Conflict w/ texlive-extra-utils (<< 2020.20200329).
    Closes: #956587

 -- Hilmar Preusse <hille42@web.de>  Mon, 13 Apr 2020 23:06:17 +0200

texlive-bin (2020.20200327.54578-2) unstable; urgency=medium

  * TeX Live 2020

 -- Norbert Preining <norbert@preining.info>  Mon, 30 Mar 2020 09:01:24 +0900

texlive-bin (2020.20200327.54578-1) experimental; urgency=medium

  [ Stephen Kitt ]
  * luaharfbuzz in TeX Live 2020 needs
    HB_BUFFER_FLAG_DO_NOT_INSERT_DOTTED_CIRCLE which was added in 2.4.

  [ Hilmar Preusse ]
  * Add me to Uploaders

  [ Norbert Preining ]
  * New upstream version 2020.20200327.54578 - sources of TeX Live 2020 DVD

 -- Norbert Preining <norbert@preining.info>  Fri, 27 Mar 2020 18:04:20 +0900

texlive-bin (2020.20200313.54259-2) experimental; urgency=medium

  [ Hilmar Preusse ]
  * Add --disable-luajithbtex for not $(LUAJIT_GOOD_ARCHS) (Closes: #953774)

 -- Norbert Preining <norbert@preining.info>  Mon, 16 Mar 2020 06:30:35 +0900

texlive-bin (2020.20200313.54259-1) experimental; urgency=medium

  [ Norbert Preining ]
  * TL 2020 source build
  * Fix FTCBFS: Add texlive-binaries <cross> to Build-Depends to have
    a native tangle. (Closes: #940691) (Thanks to Helmut Grohne)
  * Change BD: libfreetype6-dev -> libfreetype-dev
  * Update patches

  [ Debian Janitor ]
  * Trim trailing whitespace.
  * Bump debhelper from old 9 to 12.
  * Set debhelper-compat version in Build-Depends.
  * Drop unnecessary dependency on dh-autoreconf.
  * Rely on pre-initialized dpkg-architecture variables.

 -- Norbert Preining <norbert@preining.info>  Fri, 13 Mar 2020 11:03:33 +0900

texlive-bin (2019.20190605.51237-3) unstable; urgency=medium

  [ Hilmar Preusse ]
  * Stop building dvisvgm package to solve FTBFS on HURD
    (Closes: #926701). It will be packaged separately (see #932968).
    Add the new package to Recommends.